--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remotelab-webapp",
+  "name": "remotelab-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
